# credit-card-extraction

./: .gitignore  AGENTS.md  README.md  pyproject.toml
plans/: adr-001-parser-architecture.md  adr-002-transaction-line-parsing.md  adr-003-footer-noise-and-balance-fallbacks.md  prd.md  progress.txt  prompt.md  tech.md
src/: AGENTS.md
src/credit_card_extraction/: api.py  extractor.py  models.py  parser.py
src/credit_card_extraction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: AGENTS.md  test_extractor.py  test_header_summary.py  test_parser.py  test_parser_state.py  test_ttb_golden.py
tests/fixtures/: ttb_statement_sample.txt  ttb_statement_sample_golden.json
