[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-card-extraction"
version = "0.0.0"
description = "Blank project scaffold."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "uvicorn>=0.40.0",
]
